cluster/network/cloudflare-ddns.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-cloudflare-ddns
  namespace: network
  labels:
    app: cloudflare-ddns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-ddns
  template:
    metadata:
      labels:
        app: cloudflare-ddns
    spec:
      containers:
        - name: cloudflare-ddns
          image: "hotio/cloudflare-ddns:latest"
          imagePullPolicy: Always
