cluster/network/traefik-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-routes
  namespace: network
spec:
  routes:
    - kind: Rule
      match: Host(`traefik.k.lanquarden.com`)
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: lanquarden-com-tls
