cluster/network/traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik
  namespace: kube-system
spec:
  routes:
    - kind: Rule
      match: Host(`longhorn.k.lanquarden.com`)
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: storage
          port: 80
    - kind: Rule
      match: Host(`traefik.k.lanquarden.com`)
      services:
        - kind: TraefikService
          name: api@internal
    - kind: Rule
      match: Host(`grafana.k.lanquarden.com`)
      services:
        - kind: Service
          name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
    - kind: Rule
      match: Host(`prometheus.k.lanquarden.com`)
      services:
        - kind: Service
          name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
